; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_bus.c_devctl_safe_quote_sb.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_subr_bus.c_devctl_safe_quote_sb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sbuf = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @devctl_safe_quote_sb(%struct.sbuf* %0, i8* %1) #0 {
  %3 = alloca %struct.sbuf*, align 8
  %4 = alloca i8*, align 8
  store %struct.sbuf* %0, %struct.sbuf** %3, align 8
  store i8* %1, i8** %4, align 8
  br label %5

5:                                                ; preds = %23, %2
  %6 = load i8*, i8** %4, align 8
  %7 = load i8, i8* %6, align 1
  %8 = sext i8 %7 to i32
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %29

10:                                               ; preds = %5
  %11 = load i8*, i8** %4, align 8
  %12 = load i8, i8* %11, align 1
  %13 = sext i8 %12 to i32
  %14 = icmp eq i32 %13, 34
  br i1 %14, label %20, label %15

15:                                               ; preds = %10
  %16 = load i8*, i8** %4, align 8
  %17 = load i8, i8* %16, align 1
  %18 = sext i8 %17 to i32
  %19 = icmp eq i32 %18, 92
  br i1 %19, label %20, label %23

20:                                               ; preds = %15, %10
  %21 = load %struct.sbuf*, %struct.sbuf** %3, align 8
  %22 = call i32 @sbuf_putc(%struct.sbuf* %21, i8 signext 92)
  br label %23

23:                                               ; preds = %20, %15
  %24 = load %struct.sbuf*, %struct.sbuf** %3, align 8
  %25 = load i8*, i8** %4, align 8
  %26 = getelementptr inbounds i8, i8* %25, i32 1
  store i8* %26, i8** %4, align 8
  %27 = load i8, i8* %25, align 1
  %28 = call i32 @sbuf_putc(%struct.sbuf* %24, i8 signext %27)
  br label %5

29:                                               ; preds = %5
  ret void
}

declare dso_local i32 @sbuf_putc(%struct.sbuf*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
